# BongTerm

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  LICENSE-APACHE  PRIVACY.md  README.md  SECURITY.md  SHIP-READINESS.md  THIRD_PARTY_NOTICES.md  attestation.intoto.jsonl  benchmark-report.md  clippy.toml  deny.toml  handoff.md  known-issues.md  orca.md  rust-toolchain.toml  sbom.cdx.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  nightly.yml  release.yml
Research/: BongT-Research_CPT.md  BongT-Research_GT.md
benches/: parser_throughput.rs
crates/bongterm-agents/: Cargo.toml
crates/bongterm-agents/src/: approval.rs  classify.rs  claude_code.rs  codex_cli.rs  corpus.rs  discover.rs  file_change.rs  lib.rs  lifecycle.rs  replay.rs  transcript.rs
crates/bongterm-agents/tests/: conformance.rs  gate15.rs
crates/bongterm-app/: Cargo.toml
crates/bongterm-app/src/: lib.rs  main.rs  session.rs  shell_app.rs  terminal_app.rs
crates/bongterm-app/tests/: gate01_shell_smoke.rs  gate05_rss.rs  phase1_exit_gates.rs  phase3_gates.rs  shell_app.rs  terminal_session.rs
crates/bongterm-blocks/: Cargo.toml
crates/bongterm-blocks/src/: lib.rs
crates/bongterm-devassist/: Cargo.toml
crates/bongterm-devassist/src/: lib.rs
crates/bongterm-devassist/src/ai/: cmdk.rs  explainer.rs  mod.rs  runner.rs
crates/bongterm-devassist/src/history/: filter.rs  frecency.rs  mod.rs
crates/bongterm-devassist/src/jobs/: list.rs  mod.rs  runner.rs
crates/bongterm-devassist/src/patterns/: matchers.rs  mod.rs  url.rs
crates/bongterm-devassist/src/snippets/: mod.rs  model.rs  render.rs
crates/bongterm-devassist/tests/: cmdk.rs  explainer.rs  jobs_runner.rs
crates/bongterm-diagnostics/: Cargo.toml
crates/bongterm-diagnostics/src/: consent.rs  export.rs  lib.rs  minidump.rs  recovery.rs
crates/bongterm-ledger/: Cargo.toml
crates/bongterm-ledger/src/: lib.rs
crates/bongterm-mcp/: Cargo.toml
crates/bongterm-mcp/src/: config.rs  lib.rs  optimizer.rs  supervisor.rs
crates/bongterm-mux/: Cargo.toml
crates/bongterm-mux/src/: lib.rs
crates/bongterm-process-control/: Cargo.toml
crates/bongterm-process-control/src/: job.rs  lib.rs
crates/bongterm-pty/: Cargo.toml
crates/bongterm-render/: Cargo.toml
crates/bongterm-secrets-api/: Cargo.toml
crates/bongterm-security/: Cargo.toml
crates/bongterm-settings/: Cargo.toml  settings.schema.json
crates/bongterm-settings/src/: lib.rs
crates/bongterm-settings/tests/: gate28_settings_recovery.rs
crates/bongterm-storage-api/: Cargo.toml
crates/bongterm-storage-api/src/: lib.rs
crates/bongterm-storage-sqlite/: Cargo.toml
crates/bongterm-storage-sqlite/src/: lib.rs  sidecar.rs
crates/bongterm-storage-sqlite/tests/: gate29_storage_recovery_suite.rs
crates/bongterm-term/: Cargo.toml
crates/bongterm-term/fuzz/: Cargo.toml
crates/bongterm-term/fuzz/fuzz_targets/: vt_parser.rs
crates/bongterm-term/src/: adapter.rs  lib.rs  surface.rs
crates/bongterm-test-kit/: Cargo.toml
crates/bongterm-test-kit/src/: lib.rs
crates/bongterm-test-kit/src/conformance/: agent_adapter_conformance.rs  frecency_repo_conformance.rs  mcp_supervisor_conformance.rs  mcp_transport_conformance.rs  minidump_writer_conformance.rs  mod.rs  negative.rs  policy_evaluator_conformance.rs  process_governor_conformance.rs  process_tree_auditor_conformance.rs  renderer_backend_conformance.rs  secret_store_conformance.rs  settings_provider_conformance.rs  storage_repository_conformance.rs  terminal_session_conformance.rs  uia_provider_conformance.rs
crates/bongterm-test-kit/src/mocks/: ai_backend.rs  mod.rs  notifier.rs
crates/bongterm-ui/: Cargo.toml
crates/bongterm-vault-windows/: Cargo.toml
crates/bongterm-vault-windows/src/: credman.rs  dpapi.rs  lib.rs  vault.rs
docs/: phase1-exit-gates.md
docs/PRD/: bongterm_prd_v6_revised.md  bongterm_prd_v7.md  bongterm_v7_resolution_matrix.md
docs/adr/: 0001-renderer-strategy.md  0002-product-name.md  0003-wgpu-glyphon-latency.md  0004-atlas-eviction.md  0005-device-integration.md  0006-ime-composition.md  0007-wezterm-submodule.md  0008-wgpu-version-correction.md  0009-claude-code-output-pinning.md  0010-mcp-process-governance.md  0011-codex-cli-auth.md  0012-edr-process-tree.md  0013-prompt-injection-approval-gate.md  0014-ev-cert-evaluation.md  0015-sbom-tooling.md
docs/codex/: phase-status.md  testing-readiness.md
docs/dogfood/: README.md  _template.md  stage-a-summary.md  stage-b-recruiting.md  stage-b-summary.md
docs/runbook/: code-signing.md  edr.md  fuzzing.md  public-flip-checklist.md  release.md  smartscreen.md
docs/security/: threat-model-phase4.md  whitepaper.md
docs/ux/: README.md  agent-sidebar.md  command-palette.md  design-tokens.md  error-recovery-screen.md  keyboard-shortcuts.md  main-window-layout.md  notification-taxonomy.md  onboarding-flow.md  pane-tab-model.md  resource-dashboard.md
packaging/msix/: AppxManifest.xml  mapping.txt
site/: index.html  style.css
tests/accessibility/: narrator_smoke.md
tools/spikes/s1-renderer-latency/: Cargo.toml
tools/spikes/s1-renderer-latency/src/: main.rs
tools/spikes/s2-vram-eviction/: Cargo.toml
tools/spikes/s2-vram-eviction/src/: main.rs
tools/spikes/s3a-device-integration/: Cargo.toml
tools/spikes/s3a-device-integration/src/: main.rs
tools/spikes/s3b-ime-composition/: Cargo.toml
tools/spikes/s3b-ime-composition/src/: main.rs
tools/spikes/s4-wezterm-api-stability/: Cargo.toml
tools/spikes/s4-wezterm-api-stability/src/: main.rs
tools/xtask/: Cargo.toml  allowed-deps.toml
tools/xtask/fuzz/: Cargo.toml  rust-toolchain.toml
tools/xtask/src/: attestation.rs  bench_report.rs  check_deps.rs  check_licenses.rs  checksums.rs  cleanup_chunks.rs  doctor.rs  forbidden_abstraction.rs  main.rs  package_msix.rs  prompt_injection_corpus.rs  release_verify.rs  sbom.rs  secret_leak_corpus.rs  site_check.rs  upstream_sync.rs
(+69 files in other folders)
