[package]
name = "bongterm-agents"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
which = "6"
bongterm-security = { path = "../bongterm-security" }
bongterm-storage-api = { path = "../bongterm-storage-api" }

[dev-dependencies]
tempfile = "3"
bongterm-test-kit = { path = "../bongterm-test-kit" }
