[package]
name = "bongterm-app"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
bongterm-diagnostics = { path = "../bongterm-diagnostics" }
bongterm-ui = { path = "../bongterm-ui" }
bongterm-pty = { path = "../bongterm-pty" }
bongterm-term = { path = "../bongterm-term" }
anyhow = { workspace = true }
iced = { workspace = true }

[dev-dependencies]
# Gate #5 (RSS): exercise the real resource sampler against a live session.
bongterm-ledger = { path = "../bongterm-ledger" }
