[package]
name = "bongterm-app"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
bongterm-diagnostics = { path = "../bongterm-diagnostics" }
bongterm-ui = { path = "../bongterm-ui" }
bongterm-pty = { path = "../bongterm-pty" }
bongterm-term = { path = "../bongterm-term" }
bongterm-render = { path = "../bongterm-render" }
anyhow = { workspace = true }
iced = { workspace = true }
# Event-driven PTY worker: blocking reader thread -> async bridge (blocking_send)
# + select! over output/input. iced already runs on a tokio runtime (its "tokio"
# feature); this declares the direct dependency the worker uses.
tokio = { workspace = true }

[dev-dependencies]
# Gate #5 (RSS): exercise the real resource sampler against a live session.
bongterm-ledger = { path = "../bongterm-ledger" }
bongterm-mux = { path = "../bongterm-mux" }
bongterm-devassist = { path = "../bongterm-devassist" }
bongterm-test-kit = { path = "../bongterm-test-kit" }
time = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
bongterm-storage-api = { path = "../bongterm-storage-api" }
