[package]
name = "bongterm-diagnostics"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
time = { workspace = true }
bongterm-security = { path = "../bongterm-security" }
serde = { workspace = true }
serde_json = { workspace = true }
minidump-writer = { workspace = true }
thiserror = { workspace = true }
