[package]
name = "bongterm-process-control"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
