[package]
name = "bongterm-term"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wezterm-term = { path = "../../vendor/wezterm/term" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parser_throughput"
harness = false
path = "../../benches/parser_throughput.rs"
