[package]
name = "bongterm-vault-windows"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
bongterm-secrets-api = { path = "../bongterm-secrets-api" }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
