[package]
name = "s2-vram-eviction"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true

# Spike S2: shared glyph atlas VRAM budget under 4-pane steady-state load.
# Harness code (src/main.rs) written when Rust + wgpu are available.
# Exit artifact: docs/adr/0004-atlas-eviction.md

[dependencies]
anyhow = { workspace = true }
# Override workspace pin: glyphon 0.6 requires wgpu 22, not 0.20.
# This spike is throwaway; the product crates still use wgpu 0.20 via workspace.
wgpu = { version = "22", features = ["wgsl"] }
glyphon = { workspace = true }
windows = { workspace = true }
bongterm-term = { path = "../../../crates/bongterm-term" }
bongterm-render = { path = "../../../crates/bongterm-render" }
tokio = { workspace = true }
tracing = { workspace = true }
