[package]
name = "s3a-device-integration"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

# Spike S3a: Iced 0.14 + bongterm-render device integration shape.
# Evaluates: (a) Iced Shader widget, (b) multi-window HWND, (c) render-to-texture.
# Harness code (src/main.rs) written after ADR-003 accepted.
# Exit artifact: docs/adr/0005-device-integration.md

[dependencies]
anyhow = { workspace = true }
wgpu = { workspace = true }
glyphon = { workspace = true }
iced = { workspace = true }
bongterm-term = { path = "../../../crates/bongterm-term" }
bongterm-render = { path = "../../../crates/bongterm-render" }
bongterm-ui = { path = "../../../crates/bongterm-ui" }
tokio = { workspace = true }
tracing = { workspace = true }
