[package]
name = "s3b-ime-composition"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true

# Spike S3b: IME composition (CJK Pinyin) on the Iced Shader widget single-HWND shape (ADR-005).
# Tests: compose/cancel/commit, surrogate pairs, ImmSetCompositionWindow positioning.
# Exit artifact: docs/adr/0006-ime-composition.md

[dependencies]
iced = { workspace = true }
windows = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
